cabal-version:      3.0
name:               fluid-simulation
version:            0.1.0.0
build-type:         Simple

executable fluid-sim
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Physics, Render, Types
  build-depends:
      base >=4.14 && <5,
      gloss >=1.13 && <1.14
  default-language: Haskell2010