name: fluid-simulation
version: 0.1.0.0
license: MIT
build-type: Simple
cabal-version: >=1.10

executable sph-fluid
  main-is: Main.hs
  other-modules: Types, Physics, Render
  hs-source-dirs: src
  build-depends: base >=4.7 && <5,
                 gloss >=1.13,
                 containers >=0.6,
                 vector >=0.12,
                 parallel >=3.2,
                 deepseq >=1.4
  default-language: Haskell2010
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N